# duckdb-lancedb

./: .gitignore  CMakeLists.txt  Makefile  devenv.nix  extension_config.cmake
lance-metal/: CMakeLists.txt
lance-metal/include/lance-metal/: MetalVectorDistance.h
lance-metal/shaders/: cosine_distance.metal  inner_product.metal  l2_distance.metal
lance-metal/src/: MetalContext.mm  MetalVectorDistance.mm
rust_lib/: Cargo.toml
rust_lib/src/: ffi.rs  lance_manager.rs  lib.rs  runtime.rs
src/: gpu_backend_cpu.cpp  gpu_backend_metal.mm  lance_functions.cpp  lance_index.cpp  lance_list.cpp  lance_optimizer.cpp  lance_search.cpp  lancedb_extension.cpp  rust_ffi.cpp
src/include/: gpu_backend.hpp  lance_index.hpp  lancedb_extension.hpp  rust_ffi.hpp
test/sql/: lance_basic.test  lance_delete.test  lance_hnsw.test  lance_optimizer.test  lance_optimizer_filter.test  lance_persist.test  lance_text_columns.test
