[package]
name = "lancedb_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LanceDB embedded vector search exposed via C FFI for DuckDB extension"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
